Updated three column layout.
Both sidebars are now positioned after main content so the content may
be more suitable served to smaller displays.

--- a/skin/sass/partials/_layout.scss
+++ b/skin/sass/partials/_layout.scss
@@ -9,6 +9,7 @@ body { background: $background; min-height: 100% }
     @include box-sizing(border-box);
     font-size: $lineheight/2;
     overflow: hidden;
+    margin-bottom: $lineheight;
     padding: $lineheight/2
 }
 
