--- a/design/template/customer/form/forgotpassword.phtml
+++ b/design/template/customer/form/forgotpassword.phtml
@@ -12,12 +12,10 @@
         </p>
         <p class="required"><small><?php echo $this->__('* Required Fields') ?></small></p>
         <p class="back-link"><a href="<?php echo $this->helper('customer')->getLoginUrl() ?>">&laquo; <?php echo $this->__('Back to Login') ?></a></p>
-        
+
         <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><?php echo $this->__('Submit') ?></button>
     </form>
 </article>
-<script type="text/javascript">
-//<![CDATA[
+<script>
     var dataForm = new VarienForm('form-validate', true);
-//]]>
 </script>
