--- a/design/template/persistent/customer/form/register.phtml
+++ b/design/template/persistent/customer/form/register.phtml
@@ -2,37 +2,45 @@
     <header class="page-title">
         <h1><?php echo $this->__('Create an Account') ?></h1>
     </header>
+
     <?php echo $this->getChildHtml('form_fields_before')?>
+
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+
     <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-validate">
         <h2 class="legend"><?php echo $this->__('Personal Information') ?></h2>
-            <p>
-                <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
-                <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
-                <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
-            </p>
-            <p>
-                <label for="email_address" class="required"><?php echo $this->__('Email Address') ?> <em>*</em></label>
-                <input type="email" name="email" id="email_address" value="<?php echo $this->htmlEscape($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
-            </p>
-            <?php if ($this->isNewsletterEnabled()): ?>
+        <p>
+            <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
+            <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
+            <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
+        </p>
+        <p>
+            <label for="email_address" class="required"><?php echo $this->__('Email Address') ?> <em>*</em></label>
+            <input type="email" name="email" id="email_address" value="<?php echo $this->htmlEscape($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
+        </p>
+
+        <?php if ($this->isNewsletterEnabled()): ?>
             <p class="control">
                 <label for="is_subscribed"><input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" /> <?php echo $this->__('Sign Up for Newsletter') ?></label>
             </p>
-            <?php endif ?>
-            <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
-            <?php if ($_dob->isEnabled()): ?>
-                <p><?php echo $_dob->setDate($this->getFormData()->getDob())->toHtml() ?></p>
-            <?php endif ?>
-            <?php $_taxvat = $this->getLayout()->createBlock('customer/widget_taxvat') ?>
-            <?php if ($_taxvat->isEnabled()): ?>
-                <p><?php echo $_taxvat->setTaxvat($this->getFormData()->getTaxvat())->toHtml() ?></p>
-            <?php endif ?>
-            <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
-            <?php if ($_gender->isEnabled()): ?>
-                <p><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></p>
-            <?php endif ?>
-    <?php if($this->getShowAddressFields()): ?>
+        <?php endif ?>
+
+        <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
+        <?php if ($_dob->isEnabled()): ?>
+            <p><?php echo $_dob->setDate($this->getFormData()->getDob())->toHtml() ?></p>
+        <?php endif ?>
+
+        <?php $_taxvat = $this->getLayout()->createBlock('customer/widget_taxvat') ?>
+        <?php if ($_taxvat->isEnabled()): ?>
+            <p><?php echo $_taxvat->setTaxvat($this->getFormData()->getTaxvat())->toHtml() ?></p>
+        <?php endif ?>
+
+        <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
+        <?php if ($_gender->isEnabled()): ?>
+            <p><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></p>
+        <?php endif ?>
+
+        <?php if($this->getShowAddressFields()): ?>
             <h2 class="legend"><?php echo $this->__('Address Information') ?></h2>
             <p>
                 <label for="company"><?php echo $this->__('Company') ?></label>
@@ -60,10 +68,8 @@
                 <select id="region_id" name="region_id" title="<?php echo $this->__('State/Province') ?>" class="validate-select" style="display:none;">
                     <option value=""><?php echo $this->__('Please select region, state or province') ?></option>
                 </select>
-                <script type="text/javascript">
-                    //<![CDATA[
-                        $('region_id').setAttribute('defaultValue', "<?php echo $this->getFormData()->getRegionId() ?>");
-                    //]]>
+                <script>
+                    $('region_id').setAttribute('defaultValue', "<?php echo $this->getFormData()->getRegionId() ?>");
                 </script>
                 <input type="text" id="region" name="region" value="<?php echo $this->htmlEscape($this->getRegion()) ?>" title="<?php echo $this->__('State/Province') ?>" class="input-text" style="display:none;" />
             </p>
@@ -78,7 +84,8 @@
                 <input type="hidden" name="default_billing" value="1" />
                 <input type="hidden" name="default_shipping" value="1" />
             </p>
-    <?php endif; ?>
+        <?php endif; ?>
+
         <h2 class="legend"><?php echo $this->__('Login Information') ?></h2>
         <p>
             <label for="password" class="required"><?php echo $this->__('Password') ?> <em>*</em></label>
@@ -88,18 +95,21 @@
             <label for="confirmation" class="required"><?php echo $this->__('Confirm Password') ?> <em>*</em></label>
             <input type="password" name="confirmation" title="<?php echo $this->__('Confirm Password') ?>" id="confirmation" class="input-text required-entry validate-cpassword" />
         </p>
-    <?php echo $this->getChildHtml('persistent.remember.me'); ?>
-    <?php echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
+
+        <?php echo $this->getChildHtml('persistent.remember.me'); ?>
+        <?php echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
+
         <p class="required"><small><?php echo $this->__('* Required Fields') ?></small></p>
+
         <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>" class="back-link">&laquo; <?php echo $this->__('Back') ?></a></p>
+
         <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><?php echo $this->__('Submit') ?></button>
     </form>
-    <script type="text/javascript">
-    //<![CDATA[
-        var dataForm = new VarienForm('form-validate', true);
-        <?php if($this->getShowAddressFields()): ?>
-        new RegionUpdater('country', 'region', 'region_id', <?php echo $this->helper('directory')->getRegionJson() ?>, undefined, 'zip');
-        <?php endif; ?>
-    //]]>
-    </script>
 </article>
+
+<script>
+    var dataForm = new VarienForm('form-validate', true);
+    <?php if($this->getShowAddressFields()): ?>
+    new RegionUpdater('country', 'region', 'region_id', <?php echo $this->helper('directory')->getRegionJson() ?>, undefined, 'zip');
+    <?php endif; ?>
+</script>
